支持在CR中指定image pull secret

--- a/docker/helm-charts/powerful/templates/powerful.yaml
+++ b/docker/helm-charts/powerful/templates/powerful.yaml
@@ -159,8 +159,8 @@ spec:
 {{- end }}
 {{- end }}
       imagePullSecrets:
-{{- range $deploy.imagePullSecrets }}
-      - name: {{ . }}
+{{- range $name, $_ := $deploy.imagePullSecrets }}
+      - name: {{ $name }}
 {{- end }}
       nodeSelector:
 {{ toYaml $deploy.nodeSelector | indent 8 }}
