--- a/docker/helm-charts/powerful/templates/imagePullSecrets.yaml
+++ b/docker/helm-charts/powerful/templates/imagePullSecrets.yaml
@@ -3,7 +3,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ $name }}
-  namespace: {{ include "namespace" $}}
+  namespace: {{ $.Release.Name }}
+  labels:
+    release: {{ $.Release.Name }}
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ $secret | quote }}
