--- a/powerful-springboot-1/Dockerfile-java8
+++ b/powerful-springboot-1/Dockerfile-java8
@@ -1,3 +1,3 @@
-FROM hub.c.163.com/qingzhou/amm-toolbox:v0.1.0
+FROM hub.c.163.com/qingzhou/amm-toolbox:v0.1.0-java8
 ADD target/powerful-springboot-1.jar /app.jar
 ENTRYPOINT java $JAVA_OPTS -jar /app.jar
