--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.3.1.RELEASE</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>zhranklin</groupId>
   <artifactId>powerful</artifactId>
@@ -15,6 +21,10 @@
     <module>powerful-springboot-1</module>
     <module>powerful-springboot-2</module>
     <module>powerful-common</module>
+    <module>gateway</module>
+    <module>webflux-advisor</module>
+    <module>webflux-provider</module>
+    <module>webflux-view</module>
   </modules>
 
 </project>
