--- a/powerful-springboot-1/pom.xml
+++ b/powerful-springboot-1/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.5.8.RELEASE</version>
+    <version>2.2.7.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>zhranklin</groupId>
@@ -20,22 +20,22 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
-    <dependency>
-      <groupId>zhranklin</groupId>
-      <artifactId>powerful-common</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>zhranklin</groupId>
-      <artifactId>powerful-core</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>zhranklin</groupId>-->
+<!--      <artifactId>powerful-common</artifactId>-->
+<!--      <version>0.0.1-SNAPSHOT</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>zhranklin</groupId>-->
+<!--      <artifactId>powerful-core</artifactId>-->
+<!--      <version>0.0.1-SNAPSHOT</version>-->
+<!--    </dependency>-->
   </dependencies>
 
   <build>
