--- a/powerful-springboot-2/Dockerfile
+++ b/powerful-springboot-2/Dockerfile
@@ -1,3 +1,3 @@
-FROM hub.c.163.com/qingzhou/amm-toolbox:v0.1.0
+FROM zhranklin/toolbox:v0.1.2
 ADD target/powerful-springboot-2.jar /app.jar
 ENTRYPOINT java $JAVA_OPTS -jar /app.jar
