--- a/powerful-springboot-2/Dockerfile-java8
+++ b/powerful-springboot-2/Dockerfile-java8
@@ -1,3 +1,4 @@
 FROM zhranklin/toolbox:v0.1.2-java8
+COPY bin /usr/local/bin
 ADD target/powerful-springboot-2.jar /app.jar
-ENTRYPOINT java $JAVA_OPTS -jar /app.jar
+ENTRYPOINT ["/usr/local/bin/start.sh"]
