fix webflux demo

--- a/webflux-advisor/src/main/resources/application.properties
+++ b/webflux-advisor/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=WEBFLUX-ADVISOR
-server.port=5202
+spring.application.name=webflux-advisor-27
+server.port=8973
 
 hot_stock_ids=sz000877,sh600425,sh600782
-#stock_provider_url=http://localhost:5201
-#stock_viewer_url=http://localhost:5205
+stock_provider_url=http://webflux-provider-27
+stock_viewer_url=http://webfliux-viewer-27
 
 test2=test2
