--- a/webflux-provider/src/main/resources/application.properties
+++ b/webflux-provider/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=WEBFLUX-PROVIDER
-server.port=5201
+spring.application.name=webflux-provider-27
+server.port=12367
 
 stock_ids=sz000001,sz000002,sz000018,sz000877,sh600425,sh600782
 offline=true
