--- a/webflux-view/src/main/resources/application.properties
+++ b/webflux-view/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=webflux-view
-server.port=5205
+spring.application.name=webflux-view-27
+server.port=8790
 grpc.server.port=5206
-#stock_provider_url=http://localhost:5201
-#stock_advisor_url=http://localhost:5202
+stock_provider_url=http://webflux-provider-27
+stock_advisor_url=http://webflux-advisor-27
 
 auth_center_url=http://10.182.2.108:10101
 
