--- a/webflux-view/Dockerfile
+++ b/webflux-view/Dockerfile
@@ -1,3 +1,3 @@
 FROM hub.c.163.com/qingzhou/amm-toolbox:v0.1.0-java8_linux_amd64
-ADD target/webflux-view-2.2.6.RELEASE.jar /app.jar
+ADD target/webflux-view-2.7.5.jar /app.jar
 ENTRYPOINT java $JAVA_OPTS -jar /app.jar
