--- a/webflux-view/Dockerfile
+++ b/webflux-view/Dockerfile
@@ -1,5 +1,5 @@
 FROM harbor.cloud.netease.com/qzprod/tomcat-8.5-jdk8-openjdk-skiff:v1.6-220801-multi-arch
-ADD target/webflux-viewer-2.7.5.jar /app.jar
+ADD target/webflux-view-2.7.5.jar /app.jar
 
 ADD start.sh /start.sh
 
